Conexão com MySQL

--- a/pautas/index.html
+++ b/pautas/index.html
@@ -70,9 +70,9 @@
 
             <!-- Licensa -->
             <div class="form-group  col-lg-6">
-                <label for="license">Licensa Padrão </label>
+                <label for="licenca">Licença Padrão </label>
                 <!-- <input class="form-control" type="text" id="license" name="license" /> -->
-                <select class="form-control" name="license" id="license">
+                <select class="form-control" name="licenca" id="licenca">
                     <option value="">Venda</option>
                     <option value="">Divulgação</option>
                 </select>
