--- a/pautas/index.html
+++ b/pautas/index.html
@@ -32,7 +32,7 @@
             <!-- Titulo -->
             <div class="form-group  col-lg-12">
                 <label for="title">Título </label>
-                <input class="form-control" type="text" id="title" name="title" />
+                <input class="form-control" type="text" id="title" name="title" required="true"/>
             </div>
 
             <!-- Editoria -->
@@ -55,7 +55,7 @@
             <!-- Data e Hora  -->
             <div class="form-group  col-lg-6">
                 <label for="time">Data e Hora </label>
-                <input class="form-control" type="datetime-local" id="time" name="time" />
+                <input class="form-control" type="datetime-local" id="time" name="time" required="true"/>
             </div>
 
             <!-- Cobertura -->
@@ -81,21 +81,21 @@
             <!-- Atividade -->
             <div class="form-group  col-lg-6">
                 <label for="atividade">Atividade </label>
-                <input class="form-control" type="text" id="atividade" name="atividade" />
+                <input class="form-control" type="text" id="atividade" name="atividade" required="true"/>
 
             </div>
 
             <!-- Empresa -->
             <div class="form-group  col-lg-6">
                 <label for="empresa">Empresa </label>
-                <input class="form-control" type="text" id="empresa" name="empresa" />
+                <input class="form-control" type="text" id="empresa" name="empresa" required="true"/>
             </div>
 
             <!-- Endereço -->
             <div class="form-group  col-lg-6">
                 <label for="address">Endereço </label>
                 <!-- <input class="form-control" type="text" id="title" name="title" /> -->
-                <textarea class="form-control" name="address" id="address" cols="30" rows="10"></textarea>
+                <textarea class="form-control" name="address" id="address" cols="30" rows="10" required="true"></textarea>
             </div>
 
             <!-- Orientações -->
