--- a/pautas/index.html
+++ b/pautas/index.html
@@ -39,32 +39,32 @@
             <div class="form-group  col-lg-6">
                 <label for="editoria">Editoria</label>
                 <select class="form-control" name="editoria" id="editoria">
-                    <option value="">Cultura</option>
-                    <option value="">Arte</option>
-                    <option value="">Esporte</option>
-                    <option value="">Ciência e Saúde</option>
-                    <option value="">Politica</option>
-                    <option value="">Tecnologia</option>
-                    <option value="">Tempo e trânsito</option>
-                    <option value="">Social</option>
-                    <option value="">Internacional</option>
-                    <option value="">Cotidiano</option>
+                    <option value="Cultura">Cultura</option>
+                    <option value="Arte">Arte</option>
+                    <option value="Esporte">Esporte</option>
+                    <option value="Ciência e Saúde">Ciência e Saúde</option>
+                    <option value="Politica">Politica</option>
+                    <option value="Tecnologia">Tecnologia</option>
+                    <option value="Tempo e trânsito">Tempo e trânsito</option>
+                    <option value="Social">Social</option>
+                    <option value="Internacional">Internacional</option>
+                    <option value="Cotidiano">Cotidiano</option>
                 </select>
             </div>
 
             <!-- Data e Hora  -->
             <div class="form-group  col-lg-6">
-                <label for="time">Data e Hora </label>
-                <input class="form-control" type="datetime-local" id="time" name="time" required="true"/>
+                <label for="data">Data e Hora</label>
+                <input class="form-control" type="datetime-local" id="data" name="data" required="true"/>
             </div>
 
             <!-- Cobertura -->
             <div class="form-group  col-lg-6">
                 <label for="cobertura">Cobertura</label>
                 <select class="form-control" name="cobertura" id="cobertura">
-                    <option value="">Jornalistico</option>
-                    <option value="">Social</option>
-                    <option value="">Editorial</option>
+                    <option value="Jornalistico">Jornalistico</option>
+                    <option value="Social">Social</option>
+                    <option value="Editorial">Editorial</option>
                 </select>
             </div>
 
@@ -73,8 +73,8 @@
                 <label for="licenca">Licença Padrão </label>
                 <!-- <input class="form-control" type="text" id="license" name="license" /> -->
                 <select class="form-control" name="licenca" id="licenca">
-                    <option value="">Venda</option>
-                    <option value="">Divulgação</option>
+                    <option value="Venda">Venda</option>
+                    <option value="Divulgação">Divulgação</option>
                 </select>
             </div>
 
@@ -93,15 +93,15 @@
 
             <!-- Endereço -->
             <div class="form-group  col-lg-6">
-                <label for="address">Endereço </label>
+                <label for="endereco">Endereço </label>
                 <!-- <input class="form-control" type="text" id="title" name="title" /> -->
-                <textarea class="form-control" name="address" id="address" cols="30" rows="10" required="true"></textarea>
+                <textarea class="form-control" name="endereco" id="endereco" cols="30" rows="10" required="true"></textarea>
             </div>
 
             <!-- Orientações -->
             <div class="form-group  col-lg-6">
-                <label for="orientation">Orientações </label>
-                <textarea class="form-control" name="orientation" id="orientation" cols="30" rows="10"></textarea>
+                <label for="orientacoes">Orientações </label>
+                <textarea class="form-control" name="orientacoes" id="orientacoes" cols="30" rows="10"></textarea>
                 <!-- <input class="form-control" type="text" id="orientation" name="orientation" /> -->
             </div>
 
