--- a/pautas/index.html
+++ b/pautas/index.html
@@ -108,7 +108,7 @@
 
             <!-- Cadastrar -->
             <div class="form-group  col-lg-12">
-                <button class="form-control " type='submit'>Cadastrar</button>
+                <button class="form-control btn btn-success"  type='submit'>Cadastrar</button>
             </div>
 
         </form>
