--- a/pautas/lista-pautas.html
+++ b/pautas/lista-pautas.html
@@ -44,7 +44,7 @@
                     <td>Doe</td>
                     <td>john@example.com</td>
                     <td>
-                        <input type="button" name="edit" class="btn btn-info" value="">
+                        <input type="button" name="edit" class="btn btn-info" value="Destacado">
                         <input type="button" name="edit" class="btn btn-primary" value="Editar">
                         <input type="button" name="del" class="btn btn-danger" value="Remover">
                     </td>
