Botão de Voltar

--- a/pautas/success.html
+++ b/pautas/success.html
@@ -28,6 +28,7 @@
         <h4>andre@fotro.com.br</h4>
 
         <div id="footer"><img src="http://i.imgur.com/tjgz2Tk.png" alt=""></div>
+        <a href="http://www.fotro.com.br/pautas/" class='btn'>< Voltar</a>
     </div>
 
 </body>
