--- a/pautas/success.html
+++ b/pautas/success.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
 
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="./style.css">
+    
     <title>Pauta Enviada com Sucesso!</title>
 </head>
 <body>
@@ -28,7 +29,7 @@
         <h4>andre@fotro.com.br</h4>
 
         <div id="footer"><img src="http://i.imgur.com/tjgz2Tk.png" alt=""></div>
-        <a href="http://www.fotro.com.br/pautas/" class='btn'>< Voltar</a>
+        <a href="http://www.fotro.com.br/pautas/" class=''>< Voltar</a>
     </div>
 
 </body>
