--- a/pautas/index.html
+++ b/pautas/index.html
@@ -108,7 +108,7 @@
 
             <!-- Cadastrar -->
             <div class="form-group  col-lg-12">
-                <button class="btn" type='submit'>Cadastrar</button>
+                <button class="btn" type='submit' style="background: #EFC21E;">Cadastrar</button>
             </div>
 
         </form>
