--- a/pautas/success-edit.html
+++ b/pautas/success-edit.html
@@ -14,14 +14,14 @@
 
     <link rel="stylesheet" href="./style.css">
 
-    <title>Pauta Enviada com Sucesso!</title>
+    <title>Pauta atualizada com Sucesso!</title>
 </head>
 <body>
     <div id="header">
         <h1>QUE MARAVILHA!</h1>
     </div>
     <div id="wrap">
-        <h2>Seu cadastro foi realizado com Sucesso!</h2>
+        <h2>O registro foi atualizado com Sucesso!</h2>
         <br>
         <h3>Qualquer dúvida entre em contato</h3>
         <br>
