--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <!-- Visualização de album -->
                 <div ng-if='viewAlbum' class='frimdl-cell mdl-cell--12-col viewAlbum' >
 
-                    <h2><a href='' ng-click='Back()'><i class="fa fa-arrow-left"></i></a> {{data.photoset.title}}</h2>
+                    <h2><a href='' ng-click='Back()'><i style='color: #4e4e4e;' class="fa fa-arrow-left"></i></a> {{data.photoset.title}}</h2>
 
                     <div on-last-repeat ng-repeat="photo in data.photoset.photo" class="item-port  mdl-cell mdl-cell--3-col" style=" height: 200px; overflow: hidden">
 
