--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Agência Fotro - Agência fotográfica que atua em belo Horizonte e Região.">
+    <meta name="keywords" content="Album de casamento, melhor fotografo, fotografia social, tudo de casamento, book, Fotojornalismo, jornalismo, esportivo, editorial, photo, Fotografia institucional, agencia de fotojornalismo">
+    <meta name="author" content="André Yanclous">
     <title>Agência Fotro</title>
 
 
