--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <div id="md-content">
 
                                 <div>
-                                    <img ng-src="https://farm{{photo.farm}}.staticflickr.com/{{photo.server}}/{{photo.id}}_{{photo.secret}}_.jpg" alt="" />
+                                    <img ng-src="https://farm{{photo.farm}}.staticflickr.com/{{photo.server}}/{{photo.id}}_{{photo.secret}}_b.jpg" alt="" />
                                 </div>
 
                                 <div id="control">
